--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "recipe"
+    }
+  },
+  "defaultProject": "recipe",
+  "cli": {
+    "analytics": "da012c0e-ebc5-4299-a4ee-db23e757ad51"
+  }
 }
